# swiftc

./: CMakeLists.txt  README.md
include/swiftc/: numbers.h  swiftc.h
include/swiftc/mem/: Allocator.h  ArenaAllocator.h  ArrayList.h  PageAllocator.h  Slice.h  mem.h  utils.h
include/swiftc/os/linux/: aarch64-syscall.h  linux.h  x86_64-syscall.h
tests/: clang-ignore.h  mem.c  syscall.c
